--- a/src/app/policy/policy.component.html
+++ b/src/app/policy/policy.component.html
@@ -3,38 +3,45 @@
         <div><a (click)="goToPreviousPage()"><img src="assets\solar_arrow-up-linear.png"></a>
         </div>
         
-        <div>  <h2 id="tittle">Refund Policy</h2></div>
+        <div>  <h1 id="tittle">Terms & Conditions</h1>
+<br>
+<p><a>https://merchant.razorpay.com/policy/Nb37ckZBzAjdP4/terms</a>
+  Last updated on Feb 15 2024
+  For the purpose of these Terms and Conditions, The term "we", "us", "our" used anywhere on thispage shall mean KISAN MARKET, whose registered/operational offi ce is Pl no: 588, Vedehi Nagar,Near BDL Complex, Vanasthalipuram, Gurramguda Rd K V Rangareddy TELANGANA 500070 .<br>
+  "you", “your”, "user", “visitor” shall mean any natural or legal person who is visiting our websiteand/or agreed to purchase from us.</p><br>
+
+Your use of the website and/or purchase from us are governed by following Terms and Conditions:
+The content of the pages of this website is subject to change without notice.
+Neither we nor any third parties provide any warranty or guarantee as to the accuracy,timeliness, performance, completeness or suitability of the information and materials foundor offered on this website for any particular purpose. You acknowledge that such informationand materials may contain inaccuracies or errors and we expressly exclude liability for anysuch inaccuracies or errors to the fullest extent permitted by law.
+Your use of any information or materials on our website and/or product pages is entirely atyour own risk, for which we shall not be liable. It shall be your own responsibility to ensurethat any products, services or information available through our website and/or productpages meet your specifi c requirements.
+Our website contains material which is owned by or licensed to us. This material includes, butare not limited to, the design, layout, look, appearance and graphics. Reproduction isprohibited other than in accordance with the copyright notice, which forms part of theseterms and conditions.
+All trademarks reproduced in our website which are not the property of, or licensed to, theoperator are acknowledged on the website.
+
+Unauthorized use of information provided by us shall give rise to a claim for damages and/orbe a criminal offense.
+From time to time our website may also include links to other websites. These links areprovided for your convenience to provide further information.
+You may not create a link to our website from another website or document without KISANMARKET’s prior written consent.
+Any dispute arising out of use of our website and/or purchase with us and/or any engagementwith us is subject to the laws of India .
+We, shall be under no liability whatsoever in respect of any loss or damage arising directly orindirectly out of the decline of authorization for any Transaction, on Account of theCardholder having exceeded the preset limit mutually agreed by us with our acquiring bankfrom time to time
+
+<hr>
+
+          <h2 id="tittle">Refund Policy & Order Cancellation</h2></div>
     </div>
     <div>
-               <h3> Refund Policy for Kissan Mart Door Delivery App</h3>
-               <br>  Thank you for choosing <span class="Kissan-tittle">KissanMart</span> for your fresh vegetables needs. We strive to provide you with the highest quality produce and exceptional service. However, we understand that there may be situations where you may need to request a refund. Please review our refund policy below:
+               <h3> Refund Policy for Kissan Mart Door Delivery App</h3><br>
+               <p>KISAN MARKET believes in helping its customers as far as possible, and has therefore a liberal cancellation policy. Under this policy:
 
-      <br><br>  <span class="sub-title">Order Cancellation:</span><br>
-
-        You may cancel your order up to 10  minutes before the scheduled delivery time to receive a full refund.
-        Cancellations made within 10  minutes of the delivery time may be subject to a partial refund.
-       
-      <br> <br><span class="sub-title"> Quality Issues:</span><br>
-
-        We take pride in delivering fresh and high-quality vegetables. If you receive vegetables that do not meet our quality standards, please contact our customer support team within 10  minutes of receiving your order.
-        Provide clear photos and a description of the quality issue to facilitate a prompt resolution.
-        
-       <br> <br><span class="sub-title">Missing Items:</span><br>
-
-        In the rare event that an item is missing from your order, please contact us within 10  minutes of delivery. We will arrange for a refund or redelivery of the missing item.
-     <br> <br>  <span class="sub-title">Incorrect Items:</span><br>
-
-        If you receive items that differ from what you ordered, please contact us within 10 minutes of delivery. We will arrange for a refund or replacement of the incorrect items.
-        <br> <br><span class="sub-title">Refund Process:</span><br>
-
-        To initiate a refund, please contact our customer support team through the app or by emailing <span>email</span> with your order number, a description of the issue, and supporting photos (if applicable).
-        Refunds will be processed within 1 business days after approval.
-      <br><br>  <span class="sub-title"> Refund Methods:</span><br>
-
-        Refunds will be issued to the original payment method used for the order.
-       <br> <br><span class="sub-title">Refund Exceptions:</span><br>
-
-        Refunds will not be provided for issues related to taste preferences or changes of mind.
+               Cancellations will be considered only if the request is made within same day of placing the order. However, the cancellation request may not be entertained if the orders have been communicated to the vendors/merchants and they have initiated the process of shipping them.<br>
+               
+               KISAN MARKET does not accept cancellation requests for perishable items like flowers, eatables etc. However, refund/replacement can be made if the customer establishes that the quality of product delivered is not good.<br>
+               
+               In case of receipt of damaged or defective items please report the same to our Customer Service team. The request will, however, be entertained once the merchant has checked and determined the same at his own end. This should be reported within same day of receipt of the products.<br>
+               
+               In case you feel that the product received is not as shown on the site or as per your expectations, you must bring it to the notice of our customer service within same day of receiving the product. The Customer Service Team after looking into your complaint will take an appropriate decision.<br>
+               
+               In case of complaints regarding products that come with a warranty from manufacturers, please refer the issue to them.
+               
+               In case of any Refunds approved by the KISAN MARKET, it’ll take 1-2 days for the refund to be processed to the end customer.</p>
         
         <br><br><span class="sub-title">Customer Support:</span><br>
 
@@ -46,7 +53,12 @@
         By using our Kissan Mart App, you agree to adhere to the terms and conditions outlined in this refund policy. If you have any questions or concerns, please contact our customer support team.
 
         Thank you for choosing <span class="Kissan-tittle">KissanMart</span>!
-
-       
+<h1>Shipping and Delivery</h1>
+  <a>https://merchant.razorpay.com/policy/Nb37ckZBzAjdP4/shipping</a>
+  Last updated on Feb 15 2024
+  For International buyers, orders are shipped and delivered through registered international couriercompanies and/or International speed post only. <br>
+  For domestic buyers, orders are shipped throughregistered domestic courier companies and /or speed post only. Orders are shipped within 0-7 days oras per the delivery date agreed at the time of order confi rmation and delivering of the shipmentsubject to Courier Company / post offi ce norms.
+   <br>KISAN MARKET is not liable for any delay in deliveryby the courier company / postal authorities and only guarantees to hand over the consignment to thecourier company or postal authorities within 0-7 days rom the date of the order and payment or as perthe delivery date agreed at the time of order confi rmation. <br>
+  Delivery of all orders will be to the addressprovided by the buyer. Delivery of our services will be confi rmed on your mail ID as specifi ed duringregistration. For any issues in utilizing our services you may contact our helpdesk on 6301086714 orkisanmarketinfo@gmail.com.
             </div>
 </div>
